--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,8 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
+charset = utf-8
+max_line_length = 79
 
 [{Makefile,**.mk}]
 indent_style = tab
